Refs #93 Online Heatmap View - Auto-complete dropdown width is now 400px and text wrap if length is large. - Labeled field as product/area. - category name remove from other exports. - Comment corrected for view count file. - Plain Mouseover removed. - Description is only thing displayed on mouseover of product/area. - Only red background cell given white outline to shoe red numbers. - Active Industry is now default view.

--- a/css/main.css
+++ b/css/main.css
@@ -297,7 +297,7 @@ iframe{
 }
 .autocomplete div { 
 	padding:2px 5px; 
-	white-space:nowrap; 
+	white-space:wrap; 
 }
 .autocomplete strong { 
 	font-weight:normal; 
